Revision history for perl distribution Convos

6.12 Not Released
 - Fix on_connect_commands might not be set in all cases

6.11 2021-04-10T19:54:00+0900
 - Changed /logout to always result in 302 redirect #586
 - Removed "dependencies" from /settings

6.10 2021-04-05T14:12:00+0900
 - Will prompt the user to enable notifications
 - Fix chat action links
 - Fix editing connection when uri= is present
 - Fix position for "jump to now" above chat input

6.09 2021-04-05T15:18:00+0900
 - Add "skip_queue" to connection profile
 - Fix not skip the connection queue on connect failure
 - Hide port number in connection list

6.08 2021-04-05T12:43:00+0900
 - Add support for some more command aliases #580
 - Add logging of login attempts #582
 - Add support for connection profiles #584
 - Add DELETE /api/connection-profiles/:id #584
 - Add GET /api/connection-profiles #584
 - Add POST /api/connection-profiles #584
 - Add focus to login form on desktop
 - Fix width of inputs on ConversationAdd page
 - Renamed /settings/connection to /settings/connections #584
 - Removed "protocol" from Convos::Core::Connection
 - Removed dependencies from "Settings"
 - Simpler Convos::Core::Settings by removing support for deprecated environment variables
 - Moved global connection settings from "Settings" to "Connections" #584
 - Moved "remote_address" tracking from connection URL to user object

6.07 2021-03-24T12:44:00+0900
 - Add dependency information to Admin page
 - Fix compatibility with Mojolicious 9.11
 - Fix typo in Fallback.svelte

6.06 2021-03-05T08:30:00+0900
 - Add /shrug command
 - Fix not learning "h is tory" facts

6.05 2021-02-23T13:43:00+0900
 - Split advanced options into "Show advanced settings" and "Show authentication settings"

6.04 2021-02-23T11:43:00+0900
 - Add EXPERIMENTAL support for serving CMS pages as text and yaml
 - Fix only sending "WEBIRC ..." command if environment variable is set
 - Fix hiding the sidebar menu when URL changes

6.03 2021-02-23T21:15:00+0900